UI changes - fixed the project cards overlay issue on mobile-screens, changed SomeshKolluru to a navlink, update resume

--- a/src/styles/projectcard.css
+++ b/src/styles/projectcard.css
@@ -27,6 +27,7 @@
     justify-content: center;
     align-items: left;
     width: 60%;
+    height: 80%;
 }
 
 #projectTitleSkills{
@@ -57,6 +58,7 @@
     padding: 1em 1.8em;
     font-size: 1.2em;
     font-weight: 400;
+    height: auto;
 }
 
 img.projectImg{
@@ -68,7 +70,8 @@ img.projectImg{
 
 @media screen and (min-width: 1040px) and (max-width: 1240px){
     #projectCardContainer{
-        height: 30vh;
+        height: auto;
+        min-height: 40vh;
     }
 }
 
@@ -102,6 +105,8 @@ img.projectImg{
         flex-direction: column;
         width: 85%;
         gap: 18px;
+        height: auto;
+        min-height: 40vh;
     }
     #projectImage{
         width: 100%;
